<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Ekko</string>
    <string name="notification_desc">Reusable successfully scanned</string>
    <string name="channel_description">channel desc is random.</string>
    <string name="channel_name">high channel</string>
    <string name="dialog_nfc_title">Nfc Turned Off</string>
    <string name="dialog_nfc_desc">Please, turn on NFC to scan.</string>
    <string name="txt_go_to_settings">go to Settings</string>
    <string name="txt_dim_title">Dim Display</string>
    <string name="txt_dim_desc">Please dim the display doing so increase battery life. Please go to settings for this to be happened.</string>
    <string name="notification_desc_unses">Can\'t find anything please try again.</string>
    <string name="dialog_phone_title">Device Info</string>
    <string name="dialog_phone_desc">To make sure device is unique please provide this permission.</string>
    <string name="okay">OK</string>
    <string name="text_app_select">Select App Type</string>
    <string name="text_consumer">Dropbox</string>
    <string name="text_restaurant">Partner</string>
    <string name="text_order">Order Number</string>
    <string name="text_hint_customer_order_number">Customer Ekko ID</string>
    <string name="text_customer_order_default">Enter Customer Ekko ID</string>
    <string name="text_scan">scan</string>
    <string name="text_no_of_containers">Number of Reusables</string>
    <string name="text_clear_containers" tools:ignore="ButtonCase">CANCEL</string>
    <string name="text_submit">submit</string>
    <string name="text_edit_customer_order">Tap to edit Customer order #</string>
    <string name="text_admin">Admin</string>
    <string name="text_sign_in">Sign In</string>
    <string name="text_username">Username</string>
    <string name="text_name_detail">Enter your Email</string>
    <string name="text_password">Password</string>
    <string name="text_password_detail">Enter your Password</string>
    <string name="text_login">Login</string>
    <string name="text_admin_mode">Select Mode</string>
    <string name="text_app_mode">Change App Type?</string>
    <string name="text_sign_out">Sign Out</string>
    <string name="text_assign">Assign</string>
    <string name="text_empty">Empty</string>
    <string name="text_fleet">Fleet</string>
    <string name="text_check_in">CheckIn</string>
    <string name="text_retired">Retired</string>
    <string name="text_assign_mode">Assign Mode</string>
    <string name="text_empty_mode">Empty Mode</string>
    <string name="text_fleet_mode">Fleet Mode</string>
    <string name="text_check_in_mode">Check In Mode</string>
    <string name="text_retired_mode">Retired Mode</string>
    <string name="text_container_type">Select Reusable Type</string>
    <string name="text_container_size">Select Reusable Size</string>
    <string name="text_region">Select Region</string>
    <string name="text_partner_name">Select Partner Name</string>
    <string name="text_check_in_desc">Select the dropbox you want to check in reusables from, then tap Scan.</string>
    <string name="text_dropbox_desc">Select Drop Box</string>
    <string name="text_clean">Clean</string>
    <string name="text_retired_desc">Please click on scan button to remove reusable from fleet.</string>
    <string name="text_activity_title">Ekko</string>
    <string name="text_email">Email</string>
    <string name="text_email_empty">please enter your email address</string>
    <string name="text_invalid_email">invalid email</string>
    <string name="text_pwd_empty">please enter a password</string>
    <string name="text_pwd_limit">please enter a password with at least 6 characters</string>
    <string name="text_customer_id">Ekko ID</string>
    <string name="text_no_wifi">No Internet Connection Available, Please connect to Network</string>
    <string name="text_username_empty">Please enter dropbox name</string>
    <string name="text_user_not_found">Ekko ID entered is incorrect. Please correct or confirm customer has signed up for Ekko and try again</string>
    <string name="text_order_status">Order Status</string>
    <string name="text_order_detail">Something went wrong it\'s not you, it\'s us. We will try our best to fix this as soon as possible.</string>
    <string name="text_admin_response">Admin Operations</string>
    <string name="text_continue">Continue</string>
    <string name="text_back">Back</string>
    <string name="text_dropbox">Dropbox</string>
    <string name="text_reset">Reset</string>
    <string name="text_dropbox_desc_top">Select the dropbox you want to reset the status for, then tap Reset.</string>
    <string name="text_partner_desc">Select the Partner you want to assign reusables to, then tap Scan.</string>
    <string name="text_scan_process_desc">Scan Ekko reusables and tap Submit when done.</string>
    <string name="text_containers_no">Number of Reusables</string>
    <string name="text_set">Set</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_number">Enter Number Here</string>
    <string name="text_more">More</string>
    <string name="text_containers_no_desc">Enter the number of Ekko reusables in the order:</string>
    <string name="text_containers_scanned_ordered_check">Please ensure the number of reusables scanned match the number of reusables in the order</string>
    <string name="text_edit">Edit</string>
    <string name="text_confirm">Unable to Confirm</string>
    <string name="text_customer_not_present_desc">Customer has not signed up with Ekko. Do not use Ekko reusables for this order, do not charge customer for Ekko. Ekko will notify customer that they will not get Ekko with their order because they have not signed up.</string>
    <string name="text_close">Close</string>
    <string name="version_name">v1.0</string>
    <string-array name="admin_modes_array">
        <item>Fleet</item>
        <item>Assign</item>
        <item>CheckIn</item>
        <item>Empty</item>
        <item>Retired</item>
    </string-array>
    <string-array name="container_type_array">
        <item>Food</item>
        <item>Beverage</item>
    </string-array>
    <string-array name="container_size_array">
        <item>Large</item>
        <item>Medium</item>
        <item>Small</item>
    </string-array>
    <string-array name="container__array">

    </string-array>
</resources>