<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:focusable="false"
    android:focusableInTouchMode="true"
    tools:context=".ui.activity.RestaurantActivity">

    <TextView
        android:id="@+id/text_order_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingHorizontal="8dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/text_order"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/order_field"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/order_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Order Number"
        android:hint="@string/text_hint_customer_order_number"
        android:inputType="number"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        android:background="@drawable/background_order_text_field"
        app:layout_constraintBottom_toTopOf="@+id/text_order_desc"
        app:layout_constraintTop_toBottomOf="@+id/text_order_header" />

    <TextView
        android:id="@+id/text_order_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_customer_order_default"
        android:textSize="12sp"
        android:textColor="@android:color/background_dark"
        android:layout_marginTop="4dp"
        android:paddingHorizontal="16dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_scan"
        app:layout_constraintTop_toBottomOf="@+id/order_field" />

    <Button
        android:id="@+id/btn_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_scan"
        android:layout_marginTop="8dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/text_containers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_order_desc" />

    <TextView
        android:id="@+id/text_containers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_no_of_containers"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toTopOf="@+id/containers_number"
        app:layout_constraintTop_toBottomOf="@+id/btn_scan" />

    <TextView
        android:id="@+id/containers_number"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:textSize="70sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/text_containers" />

    <TextView
        android:id="@+id/clear_containers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:background="?selectableItemBackground"
        android:padding="8dp"
        android:text="@string/text_clear_containers"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        app:layout_constraintBottom_toTopOf="@+id/btn_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_submit"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/scans_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="btn_scan, text_order_desc" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/containers_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="text_containers, clear_containers,
         containers_number, btn_submit, btn_submit" />

</androidx.constraintlayout.widget.ConstraintLayout>