<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.WelcomeActivity">

    <TextView
        android:id="@+id/text_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_app_select"
        android:textSize="24sp"
        android:textAlignment="center"
        android:textColor="@color/green_500"
        app:layout_constraintVertical_bias=".4"
        android:layout_marginVertical="8dp"
        app:layout_constraintBottom_toTopOf="@id/btn_restaurant"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/btn_consumer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:text="@string/text_consumer"
        android:background="@drawable/background_select_btn"
        app:layout_constraintBottom_toTopOf="@+id/btn_admin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_restaurant" />

    <Button
        android:id="@+id/btn_restaurant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:text="@string/text_restaurant"
        android:background="@drawable/background_select_btn"
        app:layout_constraintBottom_toTopOf="@+id/btn_consumer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_select" />

    <Button
        android:id="@+id/btn_admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:text="@string/text_admin"
        android:background="@drawable/background_select_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_consumer" />

</androidx.constraintlayout.widget.ConstraintLayout>