<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.AccountActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="bottom|center"
        android:paddingVertical="16dp"
        android:text="@string/text_sign_in"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/signChain"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/signChain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_email"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintBottom_toTopOf="@id/password_field"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintTop_toBottomOf="@id/signChain"
        app:layout_constraintVertical_chainStyle="packed"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_password"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintBottom_toTopOf="@id/spinner_mode"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintTop_toBottomOf="@id/username_field"
        app:layout_constraintVertical_chainStyle="packed"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/admin_mode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/text_admin_mode"
        android:textColor="@color/green_500"
        app:layout_constraintBottom_toBottomOf="@id/spinner_mode"
        app:layout_constraintEnd_toStartOf="@id/spinner_mode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/spinner_mode" />

    <Spinner
        android:id="@+id/spinner_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/admin_mode"
        app:layout_constraintTop_toBottomOf="@id/password_field" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/admin_mode_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="spinner_mode, admin_mode" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="8dp"
        android:text="@string/text_login"
        app:layout_constraintBottom_toTopOf="@id/app_mode"
        app:layout_constraintTop_toBottomOf="@+id/spinner_mode" />

    <TextView
        android:id="@+id/app_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:paddingHorizontal="5dp"
        android:paddingVertical="8dp"
        android:text="@string/text_app_mode"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/login_button"
        app:layout_constraintStart_toStartOf="@+id/login_button"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>