<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.ScanFragment">

    <!-- accept data from different fragments and submit data based on fragment selection
     send data to perspective api -->

    <TextView
        android:id="@+id/text_containers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_no_of_containers"
        android:textAlignment="center"
        android:textSize="18sp"
        android:padding="20dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/containers_number"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/containers_number"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="70sp"
        android:gravity="center_horizontal|center_vertical"
        app:layout_constraintBottom_toTopOf="@+id/clear_containers"
        app:layout_constraintTop_toBottomOf="@+id/text_containers" />

    <TextView
        android:id="@+id/clear_containers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:background="?selectableItemBackground"
        android:padding="12dp"
        android:text="@string/text_clear_containers"
        android:textAlignment="center"
        android:textColor="@color/green_500"
        app:layout_constraintTop_toBottomOf="@+id/containers_number"
        app:layout_constraintBottom_toTopOf="@+id/btn_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_submit"
        android:paddingHorizontal="44dp"
        android:backgroundTint="@color/green_500"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clear_containers"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/containers_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>